--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_application_id: ^2.0.0
   flutter_localizations:
     sdk: flutter
 
@@ -30,3 +31,11 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
+
+flutter_application_id:
+  android: 
+    id: "pt.pedroafmonteiro.mosaic"
+    name: "Mosaic"
+  ios:
+    id: "pt.pedroafmonteiro.mosaic"
+    name: "Mosaic"
