--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,6 +36,12 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
+        debug {
+            applicationIdSuffix = ".dev"
+        }
+        profile {
+            applicationIdSuffix = ".profile"
+        }
     }
 }
 
